[metadata]
name = grpc-webrtc-bridge
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/gRPC-WebRTC-pybridge
description = Python gRPC-WebRTC bridge
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    aioconsole
    aiortc
    grpcio
    numpy
    reachy2-sdk-api @ git+ssh://git@github.com/pollen-robotics/reachy2-sdk-api.git@main#subdirectory=python
    gst-signalling @ git+ssh://git@github.com/pollen-robotics/gst-signalling-py.git@develop

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.3.0
      flake8==6.0.0
      pytest==7.3.1
      coverage==7.2.5
      mypy==1.0.0
      types-protobuf

[options.entry_points]
console_scripts = 
    grpc_webrtc_bridge = grpc_webrtc_bridge.server:main

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True