[metadata]
name = grpc-webrtc-bridge
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/gRPC-WebRTC-pybridge
description = Python gRPC-WebRTC bridge
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    aioconsole
    aiortc
    grpcio
    numpy

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.6.1
      isort==5.12.0
      types-protobuf==4.24.0
      pygobject-stubs==2.10.0
pollen = 
    reachy2-sdk-api @ git+ssh://git@github.com/pollen-robotics/reachy2-sdk-api.git@main#subdirectory=python
    gst-signalling @ git+ssh://git@github.com/pollen-robotics/gst-signalling-py.git@develop

[options.entry_points]
console_scripts = 
    grpc_webrtc_bridge = grpc_webrtc_bridge.server:main

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True