[metadata]
name = grpc-webrtc-bridge
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/gRPC-WebRTC-pybridge
description = Python gRPC-WebRTC bridge
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    grpcio>=1.59.0, <=1.62.2
    numpy>=1.24.0,<=1.26.4
    PyGObject>=3.42.2, <=3.46.0
    prometheus_client>=0.20.0, <1.0.0
    reachy2-sdk-api>=1.0.4,  <1.1.0

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.6.1
      isort==5.12.0
      types-protobuf
pollen = 
    gst-signalling @ git+ssh://git@github.com/pollen-robotics/gst-signalling-py.git@36-use-gstreamer-webrtcbin-instead-of-aiortc

[options.entry_points]
console_scripts = 
    grpc_webrtc_bridge = grpc_webrtc_bridge.server:main

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True